# swedish-tech-skill-observatory

./: .gitignore  ARCHITECTURE.md  README.md  ROADMAP.md  dbt_project.yml  inspect_duckdb.py  main.py  profiles.yml  pyproject.toml
dbt/models/marts/: mart_dashboard_skill_trends.sql  mart_skill_geography.sql  marts.yml  monthly_skill_counts.sql
dbt/models/staging/: sources.yml  stg_historical_job_ads.sql
dbt/tests/: assert_monthly_skill_counts_not_empty.sql  assert_skill_geography_share_bounds.sql  assert_skill_trend_share_bounds.sql
ingestion/pipelines/: load_ads.py
ingestion/sources/: arbetsformedlingen.py
scripts/: check_duckdb.py
src/skill_observatory/dashboard/: Home.py  skill_dashboard.py
src/skill_observatory/dashboard/pages/: HistoricalSkills.py
src/skill_observatory/ingestion/pipelines/: load_ads.py  load_historical_ads.py
src/skill_observatory/transformations/: build_historical_job_skills.py  build_historical_regex_skill_qa.py  build_historical_regex_skills.py  build_job_skill_lists.py  build_job_skills.py  build_monthly_skill_counts.py  skill_extraction.py
