[project]
name = "swedish-tech-skill-observatory"
version = "0.1.0"
description = "Project scaffold for dlt + dbt + Dagster + MLflow + FastAPI + Streamlit."
readme = "README.md"
requires-python = ">=3.13"

dependencies = [
    "dlt[duckdb]>=1.27.2",
    "duckdb>=1.5.3",
    "pandas>=2.3.0",
    "requests>=2.34.2",
    "python-dotenv>=1.1.1",
    "tqdm>=4.67.3",
]

[dependency-groups]
dev = [
    "ruff>=0.15.15",
]
